# SOUP_NLP

./: pyproject.toml
src/: main.py
src/core/: api.py  nlp.py
