[tool.poetry]
name = "soup-nlp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "soup_nlp"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
black = "^23.3.0"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
